[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Font/Blood Blaster.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/Blood Blaster Outline.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Backgrounds/BG.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=4]
size = 25
extra_spacing_char = 6
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -960.0
margin_right = 540.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 268, 478 )
scale = Vector2( 0.503704, 0.502083 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -67.5
margin_right = 118.0
margin_bottom = 67.5
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 236.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "SPACE SHOOTER"
align = 1
valign = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 236.0
margin_bottom = 36.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 236.0
margin_bottom = 69.0
focus_neighbour_top = NodePath("../QuitButton")
custom_colors/font_color_hover = Color( 0.509804, 0.54902, 0.827451, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="ControlButton" type="Button" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 236.0
margin_bottom = 102.0
custom_colors/font_color_hover = Color( 0.509804, 0.54902, 0.827451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Control"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 236.0
margin_bottom = 135.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_colors/font_color_hover = Color( 0.509804, 0.54902, 0.827451, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlButton" to="." method="_on_ControlButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
